welcome.lessons.welcome.array.has271.Has271.scala.error
has271:12: error: value =< is not a member of Int
				if(Math.abs(nums(i+2) - nums(i)) =< 2)
                                                                 ^